css/mikrodosering.css
body,
html {
  width: 100%;
  height: 100%;
  -webkit-overflow-scrolling: touch;
}

body {
  font-size: 1em;
  overflow-x: hidden;;
  font-family: 'Roboto', Helvetica, sans-serif;
  font-weight: 300;
  letter-spacing: 0.1px;
  line-height: 32px;
}

@media (min-width: 576px) {
  body {
    font-size: 1.2rem;
  }
}

hr {
  max-width: 50px;
  border-width: 3px;
  border-color: #4d2482;
}

hr.light {
  border-color: #fff;
}

a {
  color: #4d2482;
  -webkit-transition: all 0.2s;
  -moz-transition: all 0.2s;
  transition: all 0.2s;
}

a:hover {
  color: #7f289e;
}

a, a:active, a:focus {
   outline: none;
}

.bg-primary {
  background-color: #4d2482 !important;
}

.bg-dark {
  background-color: #212529 !important;
}

.text-faded {
  color: rgba(255, 255, 255, 0.7);
}

section {
  padding: 8rem 0;
}

.section-heading {
  margin-top: 0;
}

::-moz-selection {
  color: #fff;
  background: #212529;
  text-shadow: none;
}

::selection {
  color: #fff;
  background: #212529;
  text-shadow: none;
}

img::selection {
  color: #fff;
  background: transparent;
}

img::-moz-selection {
  color: #fff;
  background: transparent;
}

#mainNav {
  border-bottom: 1px solid rgba(33, 37, 41, 0.1);
  background-color: #fff;
  font-family: 'Open Sans', Helvetica, sans-serif;
  -webkit-transition: all 0.2s;
  -moz-transition: all 0.2s;
  transition: all 0.2s;
}

#mainNav .navbar-brand {
  font-weight: 700;
  text-transform: uppercase;
  color: #4d2482;
  font-family: 'Open Sans', Helvetica, sans-serif;
}

#mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
  color: #4d2482;
}

#mainNav .navbar-nav > li.nav-item > a.nav-link,
#mainNav .navbar-nav > li.nav-item > a.nav-link:focus {
  font-size: .9rem;
  font-weight: 700;
  text-transform: uppercase;
  color: #212529;
}

#mainNav .navbar-nav > li.nav-item > a.nav-link:hover,
#mainNav .navbar-nav > li.nav-item > a.nav-link:focus:hover {
  color: #4d2482;
}

#mainNav .navbar-nav > li.nav-item > a.nav-link.active,
#mainNav .navbar-nav > li.nav-item > a.nav-link:focus.active {
  color: #4d2482 !important;
  background-color: transparent;
}

#mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover,
#mainNav .navbar-nav > li.nav-item > a.nav-link:focus.active:hover {
  background-color: transparent;
}

@media (min-width: 992px) {
  #mainNav {
    border-color: transparent;
    background-color: transparent;
  }
  #mainNav .navbar-brand {
    color: rgba(255, 255, 255, 0.7);
  }
  #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
    color: #fff;
  }
  #mainNav .navbar-nav > li.nav-item > a.nav-link {
    padding: 0.5rem 1rem;
  }
  #mainNav .navbar-nav > li.nav-item > a.nav-link,
  #mainNav .navbar-nav > li.nav-item > a.nav-link:focus {
    color: rgba(255, 255, 255, 0.7);
  }
  #mainNav .navbar-nav > li.nav-item > a.nav-link:hover,
  #mainNav .navbar-nav > li.nav-item > a.nav-link:focus:hover {
    color: #fff;
  }
  #mainNav.navbar-shrink {
    border-bottom: 1px solid rgba(33, 37, 41, 0.1);
    background-color: #fff;
  }
  #mainNav.navbar-shrink .navbar-brand {
    color: #4d2482;
  }
  #mainNav.navbar-shrink .navbar-brand:focus, #mainNav.navbar-shrink .navbar-brand:hover {
    color: #4d2482;
  }
  #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link,
  #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus {
    color: #212529;
  }
  #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:hover,
  #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus:hover {
    color: #4d2482;
  }
}

header.masthead {
  font-family: 'Merriweather', Oxygen, Helvetica, sans-serif;
  padding-top: 8em;
  padding-bottom: calc(10rem - 56px);
}

header.masthead hr {
  margin-top: 30px;
  margin-bottom: 30px;
}

header.masthead h1 {
  font-family: Oxygen, Helvetica, sans-serif;
  letter-spacing: 2px;
  font-size: 1.8rem;
}

header.masthead p {
  font-weight: 300;
}

@media (min-width: 512px) {
  header.masthead p {
    font-size: 1.15rem;
  }
  header.masthead h1 {
    font-size: 2rem;
  }
  header.masthead {
    padding-top: 6em;
  }
}

@media (min-width: 768px) {
  header.masthead p {
    font-size: 1.15rem;
  }
  header.masthead h1 {
    font-size: 3rem;
  }
}

@media (min-width: 992px) {
  header.masthead {
    height: 100vh;
    min-height: 650px;
    padding-top: 0;
    padding-bottom: 0;
  }
  header.masthead h1 {
    font-size: 3rem;
  }
}

@media (min-width: 1200px) {
  header.masthead h1 {
    font-size: 4rem;
  }
}

.point-box {
  max-width: 400px;
}

.img-people {
    width: 10rem;
}

.text-primary {
  color: #4d2482 !important;
}

.es-logo {
  font-family: Raleway, Helvetica, sans-serif;
  letter-spacing: 0.3em;
  font-weight: 400;
  padding: 0rem 1rem 0rem 2rem;
}

.es-gradient {
  background: linear-gradient(150deg,#ecf6fb 15%,#f5efff 70%,#f5e4fb 94%);
  background-color: rgba(0, 0, 0, 0);
  background-image: linear-gradient(150deg, rgb(236, 246, 251) 15%, rgb(245, 239, 255) 70%, rgb(245, 228, 251) 94%);
  background-repeat: repeat;
  background-attachment: scroll;
  background-clip: border-box;
  background-origin: padding-box;
  background-size: auto auto;
}

.transparent {
  border-color: rgba(0, 0, 0, 0) !important;
}

.bg-dark a,
.bg-dark h2,
.bg-dark hr,
.bg-dark strong,
.bg-primary a,
.bg-primary h2,
.bg-primary hr,
.bg-primary strong {
  color: white;
}

.es-gradient h2 {
  color: #4d2482;
}

h2 {
  font-size: 26px;
  font-family: Raleway, Helvetica, sans-serif;
  font-weight: 300;
  letter-spacing: 0.18px;
  line-height: 30px;
  margin-top: 0;
  margin-bottom: 15px;
}

@media (min-width: 576px) {
  h2 {
    font-size: 37px;
    letter-spacing: 0.18px;
  }
}

h5 {
  color: #7f289e;
  font-family: Raleway, Helvetica, sans-serif;
}

.sr-list-positive,
.sr-list-negative {
  font-size: 1.5rem;
  margin: 0 1rem;
  vertical-align: middle;
}

.source {
  font-size: .9rem;
  padding-left: .4em;
}

.linkbox {
  font-size: 1.1em;
  background-color: #fff;
  -webkit-transition: all 0.4s;
  -moz-transition: all 0.4s;
  transition: all 0.4s;
}

.linkbox a{
  color: #4d2482;
}

.linkbox a:hover {
  text-decoration: none;
  color: #fff;
}

.linkbox:hover {
  background-color: #7f289e;
  -webkit-transition: all 0.4s;
  -moz-transition: all 0.4s;
  transition: all 0.4s;
  -moz-transform: translate(0, -6px);
  -ms-transform: translate(0, -6px);
  -o-transform: translate(0, -6px);
  -webkit-transform: translate(0, -6px);
  transform: translate(0, -6px)
}

.dropdown-menu,
.navbar-toggler {
  border: 0;
}

@media (min-width: 992px) {
  .dropdown-menu {
    border: 1px solid rgba(0,0,0,.15)
  }
}

.card {
  padding: 0 1rem;
}

@media (min-width: 576px) {
  .card {
    padding: 0 3rem;
  }
}

.cd-fixed-bg {  
  min-height: 100vh;
  background-attachment: scroll;
  background-repeat: no-repeat;
  background-position: center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

@media (min-width: 1025px) {
  .cd-fixed-bg {
    background-attachment: fixed;
  }
}

.cd-fixed-bg.cd-fixed-bg--1 {
  background-image: url("../img/header.jpg");
}

.cd-fixed-bg.cd-fixed-bg--2 {
  background-image: url("../img/cupandbook.jpg");
}

.cd-fixed-bg.cd-fixed-bg--3 {
  background-image: url("../img/science.jpg");
}

.cd-scrolling-bg {
  min-height: 100%;
}

.tlfbox {
  background-color: #fff;
  -webkit-transition: all 0.4s;
  -moz-transition: all 0.4s;
  transition: all 0.4s;
}

.tlfbox a {
  color: #4d2482;
}

.tlfbox a:hover {
  text-decoration: none;
  color: #fff;
}

.tlfbox:hover {
  background-color: #7f289e;
  -webkit-transition: all 0.4s;
  -moz-transition: all 0.4s;
  transition: all 0.4s;
  -moz-transform: translate(0, -6px);
  -ms-transform: translate(0, -6px);
  -o-transform: translate(0, -6px);
  -webkit-transform: translate(0, -6px);
  transform: translate(0, -6px)
}

.--white:hover {
  color: #fff;
  background-color: #7f289e !important;
}

.btn_hide {
  display: none;
}

@media (min-width: 768px) {
  .btn_hide {
    display: inline-block;
  }
}

blockquote {
  padding: 1em 2em 0em 2em;
  text-align: left;
  border-left: none;
}

blockquote hr {
  max-width: 100%;
  border-width: 1px;
  border-color: #fff;
}

.quote-badge {
  background-color: rgba(0, 0, 0, 0.2);   
}

.quote-box {
  overflow: hidden;
  border-radius: 17px;
  color: white;
  box-shadow: 2px 2px 2px 2px #E0E0E0;
}

.quotation-mark {
  padding-top: .3em;
  font-weight: bold;
  font-size: 90px;
  color: white;
  font-family: "Times New Roman", Georgia, Serif;
}

.quote-text {
  font-size: 17px;
}

#kontakt .fa-2x {
  font-size: 1.8em;
}

.fa-link {
  font-size: .9em;
}

